fix social icon alignment

--- a/newamericadotorg/assets/scss/components/_menu-list.scss
+++ b/newamericadotorg/assets/scss/components/_menu-list.scss
@@ -47,4 +47,5 @@
 .menu-list--padding-15 > * > a {
   padding-top: 15px;
   padding-bottom: 15px;
+  display: block;
 }
